@@ -4,8 +4,9 @@ Table of Contents
 2. Release notes
 3. License and source code
 4. Dependencies
-5. Python versions
-6. Limitations
+5. libaprutil versions
+6. Python versions
+7. Limitations
 
 
 Introduction
@@ -14,19 +15,25 @@ The python-aprmd5 project provides the Python module "aprmd5", which in turn is
 an interface to the MD5 routines of the Apache Portable Runtime (APR) Utility
 Library (libaprutil).
 
-The libaprutil MD5 routines are used to generate salted crypt-style hashes using
-a version of the MD5 hash algorithm modified for Apache. The resulting hashes
-always start with the prefix characters "$apr1$" in order to distinguish them
-from the result of various other crypt() variants, which use other prefixes.
-For instance, for input "foo" and salt "mYJd83wW", libaprutil produces the
-following hash:
+The main purpose of python-aprmd5 is to expose a single function,
+apr_md5_encode(), from among libaprutil's MD5 routines. That function is used to
+generate salted crypt-style hashes using a version of the MD5 hash algorithm
+that was modified for Apache. The resulting hashes always start with the prefix
+characters "$apr1$" in order to distinguish them from the result of various
+other crypt() variants, which use other prefixes. For instance, for input "foo"
+and salt "mYJd83wW", apr_md5_encode() produces the following hash:
 
   $apr1$mYJd83wW$IO.6aK3G0d4mHxcImhPX50
 
 Hashes like this are typically generated by the command line utility htpasswd,
 which is part of the Apache HTTP server project. The hashes encrypt user
-passwords, which are used by the Apache HTTP server for basic user
-authentication.
+passwords that are used by the Apache HTTP server for basic user authentication.
+
+In an attempt to earn its name, python-aprmd5 tries to expose most of the other
+functions of libaprutil's MD5 routines as well. It doesn't try too hard, though,
+since those functions are mostly concerned with the original, unmodified MD5
+algorithm, and that algorithm can be easily obtained through the Python Standard
+Library module "hashlib".
 
 
 Release notes
@@ -56,9 +63,15 @@ Obviously, python-aprmd5 depends on the presence of libaprutil. At compile time,
 both the headers and the library file must be present. At runtime, the library
 file is sufficient.
 
+
+libaprutil versions
+-------------------
 No formal tests for compatibility with certain versions of libaprutil have been
 performed. The earliest version that I have casually used on my system at home
-is libaprutil 0.9. 
+(a Mac OS X box) is libaprutil 0.9. Another version that I have used for casual
+testing on a Debian virtual box is libaprutil 1.3.5.
+
+To switch between the two major versions 0.x and 1.x xxx
 
 
 Python versions
@@ -70,4 +83,5 @@ Python 3.
 
 Limitations
 -----------
-None known.
+python-aprmd5's treatment of libaprutil's MD5 routines other than the function
+apr_md5_encode() is rather cursory.
