@@ -13,7 +13,8 @@ Release blockers
 - Determine license to use (GPL v3 or LGPL)
 - Check out project structure of python-mhash
 - Finish writing INSTALL (section "packager information")
-- Finish writing README
+- Finish writing README; among other things, document how to switch between
+  major versions of libaprutil in the "libaprutil version" section
 - Finish writing ReleaseSteps
 - Make it work for all versions of libaprutil
 - Find a way how to use the system version of apr-util on my Mac; the custom
@@ -31,7 +32,13 @@ None
 
 Priority 2 (nice to have)
 -------------------------
-None
+- Instead of directly exposing apr_md5_init(), apr_md5_update() and
+  apr_md5_final(), python-aprmd5 should behave similar to the Python Standard
+  Library's hashlib module:
+    1) Generate an md5 object (corresponds to calling apr_md5_init())
+    2) Calling update() on the object (corresponds to calling apr_md5_update())
+    3) Calling digest() on the object (corresponds to calling apr_md5_final())
+    4) As a convenience, provide a hexdigest() method
 
 
 Priority 3 (not important)
