@@ -37,7 +37,7 @@ import sys
 # command line:
 #   ./setup.py build_ext --inplace
 aprmd5 = Extension('aprmd5',
-                    libraries = ['aprutil-0'],
+                    libraries = ['aprutil-0'],   # replace this by aprutil-1 for major versions 1.x
                     sources = ['aprmd5.c'])
 
 
@@ -51,20 +51,29 @@ setup(
       description="Python interface to the MD5 routines of the apr-util library",
       long_description=
 """
-Python interface to the MD5 routines of the apr-util library.
+The python-aprmd5 project provides the Python module "aprmd5", which in turn is
+an interface to the MD5 routines of the Apache Portable Runtime (APR) Utility
+Library (libaprutil).
 
-The libaprutil MD5 routines are used to generate salted crypt-style hashes using
-a version of MD5 modified for Apache. The resulting hashes always start with
-the prefix characters "$apr1$" in order to distinguish them from the result of
-various other crypt() variants, which use other prefixes. For instance, for
-input "foo" and salt "mYJd83wW", the result is this:
+The main purpose of python-aprmd5 is to expose a single function,
+apr_md5_encode(), from among libaprutil's MD5 routines. That function is used to
+generate salted crypt-style hashes using a version of the MD5 hash algorithm
+that was modified for Apache. The resulting hashes always start with the prefix
+characters "$apr1$" in order to distinguish them from the result of various
+other crypt() variants, which use other prefixes. For instance, for input "foo"
+and salt "mYJd83wW", apr_md5_encode() produces the following hash:
 
   $apr1$mYJd83wW$IO.6aK3G0d4mHxcImhPX50
 
 Hashes like this are typically generated by the command line utility htpasswd,
 which is part of the Apache HTTP server project. The hashes encrypt user
-passwords, which are used by the Apache HTTP server for basic user
-authentication.
+passwords that are used by the Apache HTTP server for basic user authentication.
+
+In an attempt to earn its name, python-aprmd5 tries to expose most of the other
+functions of libaprutil's MD5 routines as well. It doesn't try too hard, though,
+since those functions are mostly concerned with the original, unmodified MD5
+algorithm, and that algorithm can be easily obtained through the Python Standard
+Library module "hashlib".
 """,
       # List extension modules
       ext_modules= [aprmd5]
